--- a/src/pages/user/[id]/standings/by-car-class/index.astro
+++ b/src/pages/user/[id]/standings/by-car-class/index.astro
@@ -2,6 +2,7 @@
   import { connectToDatabase } from "$lib/mongodb";
   import DefaultLayout from "$lib/layouts/default.astro";
 	import userIds from "$lib/utils/user-ids";
+	import type { CarClassMapping } from "$lib/types";
 	export function getStaticPaths() {
 		return userIds.map((id) => ({ params: { id } }));
 	}
@@ -9,7 +10,7 @@
 	const dbConnection = await connectToDatabase();
 	const db = dbConnection.db;
   const collection = db.collection("subsessions");
-	const allUserSubsessionCarClasses = await collection.aggregate([
+	const allUserSubsessionCarClasses: Array<CarClassMapping> = await collection.aggregate([
 		{
 			"$match": {
 				"session_results.2.results": { $elemMatch: { cust_id: Number(id) } },
