--- a/src/pages/user/[id]/subsessions/by-year/index.astro
+++ b/src/pages/user/[id]/subsessions/by-year/index.astro
@@ -9,7 +9,7 @@
   const dbConnection = await connectToDatabase();
   const db = dbConnection.db;
   const collection = db.collection("subsessions");
-  const years = await collection.distinct("season_year", { "session_results.2.results": { $elemMatch: { cust_id: Number(id) } } });
+  const years: Array<number> = await collection.distinct("season_year", { "session_results.2.results": { $elemMatch: { cust_id: Number(id) } } });
 ---
 
 
