--- a/src/lib/layouts/default.astro
+++ b/src/lib/layouts/default.astro
@@ -5,7 +5,7 @@ const seoDescription =
   description || "An iRacing planner and statistics analyzer";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -30,7 +30,7 @@ const seoDescription =
       <div
         class="block lg:text-3xl md:text-lg sm:text-md break-words text-center py-2"
       >
-        <a href="/Stat-N-Track/" rel="prefetch">Home</a>
+        <a class="underline" href="/Stat-N-Track/" rel="prefetch">Home</a>
       </div>
     </div>
     <slot />
