--- a/src/lib/layouts/subsessions.astro
+++ b/src/lib/layouts/subsessions.astro
@@ -98,6 +98,7 @@ const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
               >
                 {key === "0" ? (
                   <a
+                    class="underline"
                     rel="prefetch"
                     href={`/Stat-N-Track/subsession/${result[key]}`}
                   >
