--- a/src/pages/user/[id]/index.astro
+++ b/src/pages/user/[id]/index.astro
@@ -10,44 +10,62 @@ const { id } = Astro.params;
 <DefaultLayout>
   <div class="h-screen text-center text-3xl">
     <div>
-      <a rel="prefetch" href=`/Stat-N-Track/user/${id}/scheduling`
-        >Scheduling</a
-      >
-    </div>
-    <div>
-      <a rel="prefetch" href=`/Stat-N-Track/user/${id}/subsessions`
-        >All Sessions</a
-      >
-    </div>
-    <div>
-      <a rel="prefetch" href=`/Stat-N-Track/user/${id}/subsessions/by-year`
-        >Sessions By Year</a
-      >
-    </div>
-    <div>
-      <a rel="prefetch" href=`/Stat-N-Track/user/${id}/subsessions/by-car-class`
-        >Sessions By Car Class</a
-      >
-    </div>
-    <div>
-      <a rel="prefetch" href=`/Stat-N-Track/user/${id}/standings`
-        >All Season Standings</a
+      <a
+        class="underline"
+        rel="prefetch"
+        href=`/Stat-N-Track/user/${id}/scheduling`>Scheduling</a
       >
     </div>
     <div>
       <a
+        class="underline"
+        rel="prefetch"
+        href=`/Stat-N-Track/user/${id}/subsessions`>All Sessions</a
+      >
+    </div>
+    <div>
+      <a
+        class="underline"
+        rel="prefetch"
+        href=`/Stat-N-Track/user/${id}/subsessions/by-year`>Sessions By Year</a
+      >
+    </div>
+    <div>
+      <a
+        class="underline"
+        rel="prefetch"
+        href=`/Stat-N-Track/user/${id}/subsessions/by-car-class`
+        >Sessions By Car Class</a
+      >
+    </div>
+    <div>
+      <a
+        class="underline"
+        rel="prefetch"
+        href=`/Stat-N-Track/user/${id}/standings`>All Season Standings</a
+      >
+    </div>
+    <div>
+      <a
+        class="underline"
         rel="prefetch"
         href=`/Stat-N-Track/user/${id}/standings/full-participation`
         >Fully Participated Season Standings</a
       >
     </div>
     <div>
-      <a rel="prefetch" href=`/Stat-N-Track/user/${id}/standings/by-year`
+      <a
+        class="underline"
+        rel="prefetch"
+        href=`/Stat-N-Track/user/${id}/standings/by-year`
         >Season Standings By Year</a
       >
     </div>
     <div>
-      <a rel="prefetch" href=`/Stat-N-Track/user/${id}/standings/by-car-class`
+      <a
+        class="underline"
+        rel="prefetch"
+        href=`/Stat-N-Track/user/${id}/standings/by-car-class`
         >Season Standings By Car Class</a
       >
     </div>
