--- a/src/pages/user/[id]/standings/by-car-class/index.astro
+++ b/src/pages/user/[id]/standings/by-car-class/index.astro
@@ -69,6 +69,6 @@
 
 <DefaultLayout>
 	<div class="text-center text-3xl">
-	 {Array.from(carClassNames).sort().map((carClassName) => (<div><a href=`/Stat-N-Track/user/${id}/standings/by-car-class/${carClassMap.get(carClassName)}` rel="prefetch">{carClassName}</a></div>))}
+	 {Array.from(carClassNames).sort().map((carClassName) => (<div><a class="underline" href=`/Stat-N-Track/user/${id}/standings/by-car-class/${carClassMap.get(carClassName)}` rel="prefetch">{carClassName}</a></div>))}
 	</div>
 </DefaultLayout>
