--- a/src/pages/user/[id]/standings/by-year/index.astro
+++ b/src/pages/user/[id]/standings/by-year/index.astro
@@ -15,6 +15,6 @@
 
 <DefaultLayout>
 	<div class="text-center text-3xl">
-    {years.map((year) => (<div><a href=`/Stat-N-Track/user/${id}/standings/by-year/${year}` rel="prefetch">{year}</a></div>))}
+    {years.map((year) => (<div><a class="underline" href=`/Stat-N-Track/user/${id}/standings/by-year/${year}` rel="prefetch">{year}</a></div>))}
 	</div>
 </DefaultLayout>
