Add link to Shared Subsessions page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,5 +14,12 @@ import DefaultLayout from "$lib/layouts/default.astro";
         >Jack Glenzinski</a
       >
     </div>
+    <div>
+      <a
+        class="underline"
+        rel="prefetch"
+        href="/Stat-N-Track/shared-subsessions">Shared Subsessions</a
+      >
+    </div>
   </div>
 </DefaultLayout>
