--- a/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/index.astro
+++ b/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/index.astro
@@ -17,17 +17,20 @@ export async function getStaticPaths() {
     params: {
       id: Number(season.season_driver_data.cust_id),
       seasonId: Number(season.season_id),
+      carClassId: Number(season.car_class_id),
     },
   }));
 }
-const { id, seasonId } = Astro.params;
+const { id, seasonId, carClassId } = Astro.params;
 const dbConnection = await connectToDatabase();
 const db = dbConnection.db;
 const collection = db.collection<Subsession>("subsessions");
 const subsessions: Array<Subsession> = await collection
   .find({
     season_id: Number(seasonId),
-    "session_results.2.results": { $elemMatch: { cust_id: Number(id) } },
+    "session_results.2.results": {
+      $elemMatch: { cust_id: Number(id), car_class_id: Number(carClassId) },
+    },
   })
   .sort({ _id: 1 })
   .toArray();
@@ -160,7 +163,7 @@ const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
     </div>
     <script>
       import Alpine from "alpinejs";
-      import Table from "../../../../../lib/components/table/index.ts";
+      import Table from "$lib/components/table/index.ts";
       Alpine.data("table", Table);
       Alpine.start();
     </script>
