--- a/src/pages/shared-subsessions.astro
+++ b/src/pages/shared-subsessions.astro
@@ -14,6 +14,7 @@ const $and = userIds.map((userId) => ({
   "session_results.2.results": { $elemMatch: { cust_id: userId } },
 }));
 const subsessions = await collection.find({ $and }).sort({ _id: -1 }).toArray();
+const headToHeadWins: Record<string,Array<number>> = {};
 const results: Array<{
   subsessionInfo: Record<string, unknown>;
   session: Session;
@@ -52,6 +53,13 @@ const results: Array<{
       }
       return 0;
     });
+  const [winner] = results;
+  const { display_name } = winner;
+  if(headToHeadWins[display_name]) {
+    headToHeadWins[display_name].push(subsession_id)
+  } else {
+    headToHeadWins[display_name] = [subsession_id];
+  }
   const { group_name: License } = allowed_licenses.slice(0, 2).pop() || {};
   const session = {
     simsession_number: 0,
@@ -99,9 +107,28 @@ export const handleKey = ({
   }
   return String(subsessionInfo[key]);
 };
+const correctlyKeyedH2HWins = Object.keys((headToHeadWins)).reduce((object, key) => {
+  const wins = headToHeadWins[key].length;
+  object[key] = { key, wins };
+  return object;
+}, {} as Record<string,{ key: string, wins: number }>);
+const h2hOutput = Object.keys(correctlyKeyedH2HWins).map((key) => correctlyKeyedH2HWins[key]).sort((a, b) => {
+  if (a.wins > b.wins) {
+    return -1;
+  } else if (b.wins > a.wins) {
+    return 1;
+  }
+   return 0;
+});
 ---
 
 <DefaultLayout>
+  <div class="text-center lg:text-2xl md:text-md sm:text-sm py-4">
+    <div class="font-bold">Head to Head Wins</div>
+    {h2hOutput.map((value) => (
+      <div>{value.key}: {value.wins}</div>
+    ))}
+  </div>
   <div
     id="top"
     x-data={JSON.stringify(
