--- a/src/lib/layouts/default.astro
+++ b/src/lib/layouts/default.astro
@@ -1,6 +1,6 @@
 ---
 const { title, description } = Astro.props;
-const seoTitle = title || "Stat 'n' Track";
+const seoTitle = `Stat 'n' Track: ${title}` || "Stat 'n' Track";
 const seoDescription =
   description || "An iRacing planner and statistics analyzer";
 ---
@@ -18,19 +18,29 @@ const seoDescription =
   <body class="bg-gray-900 text-white font-sans">
     <div class="text-center border-white border-2">
       <p
-        class="block lg:text-7xl md:text-4xl sm-text-3xl break-words text-center"
+        class="block lg:text-5xl md:text-2xl sm:text-xl break-words text-center"
       >
         Stat 'N' Track
-      </p>
-      <p
-        class="block lg:text-4xl md:text-xl sm:text-lg break-words text-center pt-2"
-      >
-        An iRacing planner and statistics analyzer
       </p>
       <div
         class="block lg:text-3xl md:text-lg sm:text-md break-words text-center py-2"
       >
         <a class="underline" href="/Stat-N-Track/" rel="prefetch">Home</a>
+        <a
+          class="underline pl-2"
+          href="/Stat-N-Track/user/300752"
+          rel="prefetch">Jacob Collins</a
+        >
+        <a
+          class="underline pl-2"
+          href="/Stat-N-Track/user/815162"
+          rel="prefetch">Jack Glenzinski</a
+        >
+        <a
+          class="underline pl-2"
+          href="/Stat-N-Track/shared-subsessions"
+          rel="prefetch">Shared Subsessions</a
+        >
       </div>
     </div>
     <slot />
