Properly set SEO titles and descriptions

--- a/src/lib/layouts/subsessions.astro
+++ b/src/lib/layouts/subsessions.astro
@@ -71,7 +71,7 @@ const keysToDisplay = new Set(Object.keys(results[0]));
 const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
 ---
 
-<DefaultLayout {seoTitle} {seoDescription}>
+<DefaultLayout title={seoTitle} description={seoDescription}>
   <div class="grid grid-cols-1 pt-6 overflow-x-scroll">
     <table x-ref="Table" x-data="table" class="text-center col-span-1">
       <tr x-ref="Headings"
