--- a/src/pages/user/[id]/standings/by-car-class/[carClassId].astro
+++ b/src/pages/user/[id]/standings/by-car-class/[carClassId].astro
@@ -7,15 +7,14 @@ export async function getStaticPaths() {
   const dbConnection = await connectToDatabase();
   const db = dbConnection.db;
   const collection = db.collection("standings");
-  const mappings: Array<UserIdCarClassIdsMapping> =
-    await Promise.all(
-      userIds.map(async (userId) => ({
-        userId,
-        carClassIds: await collection.distinct("car_class_id", {
-          "season_driver_data.cust_id": Number(userId),
-        }),
-      }))
-    );
+  const mappings: Array<UserIdCarClassIdsMapping> = await Promise.all(
+    userIds.map(async (userId) => ({
+      userId,
+      carClassIds: await collection.distinct("car_class_id", {
+        "season_driver_data.cust_id": Number(userId),
+      }),
+    }))
+  );
   return mappings
     .map((mapping) => {
       const { userId, carClassIds } = mapping;
@@ -27,6 +26,8 @@ export async function getStaticPaths() {
 }
 
 const { id, carClassId } = Astro.params;
+const seoTitle = `Standings list for car class ID - ${carClassId} and user ID - ${id}`;
+const seoDescription = `Car class standings page for car class ID: ${carClassId} and user ID: ${id}`;
 const dbConnection = await connectToDatabase();
 const { db } = dbConnection;
 const collection = db.collection("standings");
@@ -39,4 +40,4 @@ const standingsResults = await collection
   .toArray();
 ---
 
-<StandingsLayout {id} {standingsResults} />
+<StandingsLayout {id} {seoTitle} {seoDescription} {standingsResults} />
