--- a/src/pages/user/[id]/standings/index.astro
+++ b/src/pages/user/[id]/standings/index.astro
@@ -6,6 +6,8 @@ export function getStaticPaths() {
   return userIds.map((id) => ({ params: { id } }));
 }
 const { id } = Astro.params;
+const seoTitle = `All Standings - ${id}`;
+const seoDescription = `All standings page for user ID: ${id}`;
 const dbConnection = await connectToDatabase();
 const { db } = dbConnection;
 const collection = db.collection("standings");
@@ -15,4 +17,4 @@ const standingsResults = await collection
   .toArray();
 ---
 
-<StandingsLayout {id} {standingsResults} />
+<StandingsLayout {id} {seoTitle} {seoDescription} {standingsResults} />
