--- a/src/pages/user/[id]/subsessions/by-car-class/[carClassId].astro
+++ b/src/pages/user/[id]/subsessions/by-car-class/[carClassId].astro
@@ -26,6 +26,8 @@ export async function getStaticPaths() {
 }
 
 const { id, carClassId } = Astro.params;
+const seoTitle = `Subsessions list for user ID - ${id} and car class ID - ${carClassId}`;
+const seoDescription = seoTitle;
 const dbConnection = await connectToDatabase();
 const { db } = dbConnection;
 const collection = db.collection("subsessions");
@@ -39,4 +41,4 @@ const subsessions = await collection
   .toArray();
 ---
 
-<SubsessionsLayout {id} {subsessions} />
+<SubsessionsLayout {id} {seoTitle} {seoDescription} {subsessions} />
