--- a/src/lib/components/subsession/session-results.astro
+++ b/src/lib/components/subsession/session-results.astro
@@ -1,4 +1,5 @@
 ---
+import { bgColorByUserId } from "$lib/utils/background-color-by-user";
 import fieldIdToLabelMap from "$lib/utils/field-id-to-label-map";
 import handleResults from "$lib/utils/handle-session-results";
 import lapTimeFields from "$lib/utils/lap-time-fields";
@@ -9,40 +10,23 @@ interface Props {
   keysToDisplay: Set<string>;
 }
 const { session, keysToDisplay } = Astro.props;
-const {
-  simsession_name,
-  simsession_type_name,
-  simsession_type,
-  simsession_number,
-  results,
-} = session || {};
+const { simsession_name, simsession_type_name, results } = session || {};
 const { keysArray, handledResults } = handleResults({
   keysToDisplay: keysToDisplay || new Set([]),
   results: results || [],
 });
-const showHeader =
-  simsession_name &&
-  simsession_type_name &&
-  simsession_type &&
-  simsession_number;
 ---
 
-{showHeader ? <div class="grid grid-cols-1">
+<div class="grid grid-cols-1">
   <table class="text-center col-span-1">
     <tr class="bg-gray-500">
-      <th class="border-2">Name</th>
-      <th class="border-2">Type</th>
-      <th class="border-2">Type ID</th>
-      <th class="border-2">Session ID</th>
+      <th class="border-2">Session Type</th>
     </tr>
     <tr>
-      <td class="border-2">{simsession_name}</td>
       <td class="border-2">{simsession_type_name}</td>
-      <td class="border-2">{simsession_type}</td>
-      <td class="border-2">{simsession_number}</td>
     </tr>
   </table>
-</div> : <></>}
+</div>
 <div class="grid grid-cols-1 pt-6 overflow-x-scroll">
   <table x-ref="Table" x-data={simsession_name} class="text-center col-span-1">
     <tr x-ref="Headings"
@@ -60,7 +44,7 @@ const showHeader =
     >
     {
       handledResults.map((result, rowNumber) => (
-        <tr x-ref={`Table ${rowNumber}`}>
+        <tr x-ref={`Table ${rowNumber}`} class={bgColorByUserId(result[0])}>
           {result.map((value: string | number, index: number) => (
             <td
               x-ref={`Table ${keysArray[index]} ${rowNumber}`}
