--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,24 +2,4 @@
 import DefaultLayout from "$lib/layouts/default.astro";
 ---
 
-<DefaultLayout>
-  <div class="text-center text-3xl">
-    <div>
-      <a class="underline" rel="prefetch" href="/Stat-N-Track/user/300752"
-        >Jacob Collins</a
-      >
-    </div>
-    <div>
-      <a class="underline" rel="prefetch" href="/Stat-N-Track/user/815162"
-        >Jack Glenzinski</a
-      >
-    </div>
-    <div>
-      <a
-        class="underline"
-        rel="prefetch"
-        href="/Stat-N-Track/shared-subsessions">Shared Subsessions</a
-      >
-    </div>
-  </div>
-</DefaultLayout>
+<DefaultLayout />
