--- a/src/pages/shared-subsessions.astro
+++ b/src/pages/shared-subsessions.astro
@@ -7,6 +7,7 @@ import userIds from "$lib/utils/user-ids";
 import parseLapTime from "$lib/utils/parse-lap-time";
 import fieldIdToLabelMap from "$lib/utils/field-id-to-label-map";
 import keysToDisplay from "$lib/utils/race-session-keys-to-display";
+import { bgColorByUserDisplayName } from "$lib/utils/background-color-by-user";
 const dbConnection = await connectToDatabase();
 const { db } = dbConnection;
 const collection = db.collection<Subsession>("subsessions");
@@ -14,7 +15,7 @@ const $and = userIds.map((userId) => ({
   "session_results.2.results": { $elemMatch: { cust_id: userId } },
 }));
 const subsessions = await collection.find({ $and }).sort({ _id: -1 }).toArray();
-const headToHeadWins: Record<string,Array<number>> = {};
+const headToHeadWins: Record<string, Array<number>> = {};
 const results: Array<{
   subsessionInfo: Record<string, unknown>;
   session: Session;
@@ -33,8 +34,9 @@ const results: Array<{
     race_week_num,
     season_name,
   } = subsession;
+  const { results: allUserResults, ...rest } = subsession.session_results[2];
   // Current Users in race session
-  const results = subsession.session_results[2].results
+  const results = allUserResults
     .filter((v: SessionResult) => userIds.includes(v.cust_id))
     .map((w: SessionResult) => {
       return Object.keys(w).reduce((object, key) => {
@@ -53,22 +55,18 @@ const results: Array<{
       }
       return 0;
     });
+  const session = {
+    ...rest,
+    results,
+  };
   const [winner] = results;
   const { display_name } = winner;
-  if(headToHeadWins[display_name]) {
-    headToHeadWins[display_name].push(subsession_id)
+  if (headToHeadWins[display_name]) {
+    headToHeadWins[display_name].push(subsession_id);
   } else {
     headToHeadWins[display_name] = [subsession_id];
   }
   const { group_name: License } = allowed_licenses.slice(0, 2).pop() || {};
-  const session = {
-    simsession_number: 0,
-    simsession_type: 0,
-    simsession_type_name: "",
-    simsession_subtype: 0,
-    simsession_name: "",
-    results,
-  };
   return {
     subsessionInfo: {
       subsession_id,
@@ -107,27 +105,40 @@ export const handleKey = ({
   }
   return String(subsessionInfo[key]);
 };
-const correctlyKeyedH2HWins = Object.keys((headToHeadWins)).reduce((object, key) => {
-  const wins = headToHeadWins[key].length;
-  object[key] = { key, wins };
-  return object;
-}, {} as Record<string,{ key: string, wins: number }>);
-const h2hOutput = Object.keys(correctlyKeyedH2HWins).map((key) => correctlyKeyedH2HWins[key]).sort((a, b) => {
-  if (a.wins > b.wins) {
-    return -1;
-  } else if (b.wins > a.wins) {
-    return 1;
-  }
-   return 0;
-});
+const correctlyKeyedH2HWins = Object.keys(headToHeadWins).reduce(
+  (object, key) => {
+    const wins = headToHeadWins[key].length;
+    object[key] = { key, wins };
+    return object;
+  },
+  {} as Record<string, { key: string; wins: number }>
+);
+const h2hOutput = Object.keys(correctlyKeyedH2HWins)
+  .map((key) => correctlyKeyedH2HWins[key])
+  .sort((a, b) => {
+    if (a.wins > b.wins) {
+      return -1;
+    } else if (b.wins > a.wins) {
+      return 1;
+    }
+    return 0;
+  });
+const title = "Shared Subsessions";
+const description = "Shared subsessions for all Stat 'n' Track users";
 ---
 
-<DefaultLayout>
-  <div class="text-center lg:text-2xl md:text-md sm:text-sm py-4">
-    <div class="font-bold">Head to Head Wins</div>
-    {h2hOutput.map((value) => (
-      <div>{value.key}: {value.wins}</div>
-    ))}
+<DefaultLayout {title} {description}>
+  <div class="flex flex-col">
+    <div class="self-center text-center lg:text-2xl md:text-md sm:text-sm py-4">
+      <div class="font-bold border-b-2 border-white">Head to Head Wins</div>
+      {
+        h2hOutput.map((value) => (
+          <div class={bgColorByUserDisplayName(value.key)}>
+            {value.key}: {value.wins}
+          </div>
+        ))
+      }
+    </div>
   </div>
   <div
     id="top"
@@ -185,7 +196,12 @@ const h2hOutput = Object.keys(correctlyKeyedH2HWins).map((key) => correctlyKeyed
           </tr>
           {
             results.map((result, rowNumber) => (
-              <tr x-ref={`Table ${rowNumber}`}>
+              <tr
+                x-ref={`Table ${rowNumber}`}
+                class={bgColorByUserDisplayName(
+                  result.session.results[0].display_name
+                )}
+              >
                 {Object.keys(result.subsessionInfo).map((key) => (
                   <td
                     x-ref={`Table ${key} ${rowNumber}`}
